--- a/matching/gnn/UltraGCN/config/ultragcn_amazonbooks_m1.ini
+++ b/matching/gnn/UltraGCN/config/ultragcn_amazonbooks_m1.ini
@@ -10,6 +10,8 @@ max_epoch=2000
 enable_tensorboard=yes
 initial_weight=1e-4
 
+matrix_factorization_loss=false
+
 [Training]
 dataset=amazon
 train_file_path=./data/AmazonBooks_m1/train.txt
@@ -34,6 +36,8 @@ negative_weight=500
 gamma=1e-4 
 #weight of L_I
 lambda=2.75
+#weight of matrix factorization loss
+lambda_mf=1
 
 #whether to sift the pos item when doing negative sampling
 sampling_sift_pos=no
