user user parameters added to config

--- a/matching/gnn/UltraGCN/config/ultragcn_amazonbooks_m1.ini
+++ b/matching/gnn/UltraGCN/config/ultragcn_amazonbooks_m1.ini
@@ -39,6 +39,9 @@ lambda=2.75
 #weight of matrix factorization loss
 lambda_mf=1
 
+lambda_u=0
+uu_neighbor_num=0
+
 #whether to sift the pos item when doing negative sampling
 sampling_sift_pos=no
 
