fixed user user parameters in config

--- a/matching/gnn/UltraGCN/config/ultragcn_amazonbooks_m1.ini
+++ b/matching/gnn/UltraGCN/config/ultragcn_amazonbooks_m1.ini
@@ -36,7 +36,7 @@ negative_weight=500
 #weight of l2 normalization
 gamma=1e-4 
 #weight of L_I
-lambda=2.75
+lambda_i=2.75
 #weight of matrix factorization loss
 lambda_mf=1
 
